src/compiler/src/snapshots/struktur__patterns__tests__non_exhaustive.snap
---
source: src/compiler/src/patterns.rs
expression: test_pattern_compile(text)
---
Match:
  target: []
  cases:
    - constructor:
        Bool: true
      branch:
        Success:
          bindings: []
          action: 0
  fallback: Failure
