src/compiler/src/snapshots/struktur__patterns__tests__nums.snap
---
source: src/compiler/src/patterns.rs
expression: test_pattern_compile(text)
---
Match:
  target: []
  cases:
    - constructor:
        Number: 0
      branch:
        Success:
          bindings: []
          action: 0
  fallback:
    Match:
      target: []
      cases:
        - constructor:
            Number: 1
          branch:
            Success:
              bindings: []
              action: 1
      fallback:
        Success:
          bindings:
            - variable:
                idx: 2
                version: 1
              value: []
          action: 2
