src/compiler/src/snapshots/struktur__patterns__tests__variable.snap
---
source: src/compiler/src/patterns.rs
expression: test_pattern_compile(text)
---
Success:
  bindings:
    - variable:
        idx: 2
        version: 1
      value: []
  action: 0
