src/compiler/src/snapshots/struktur__patterns__tests__wildcard.snap
---
source: src/compiler/src/patterns.rs
expression: test_pattern_compile(text)
---
Success:
  bindings: []
  action: 0
